[gd_scene format=3 uid="uid://mq5h3p2in5jw"]

[ext_resource type="Script" uid="uid://lyng6hwpykyi" path="res://Source/Scenes/Levels/Scripts/cena_1.gd" id="1_ouqje"]
[ext_resource type="PackedScene" uid="uid://bcnocjplm0u6g" path="res://Source/Assets/Modelos/Lamparina/Lamparina modelofinal.fbx" id="2_2vfmm"]
[ext_resource type="Texture2D" uid="uid://bw7f8cobp7k6l" path="res://Source/Assets/Sprites/Chao_teste_quase_interrogacao2.png" id="2_xmjli"]
[ext_resource type="PackedScene" uid="uid://vqcc34o860lb" path="res://Source/Assets/Modelos/Mesa/Mesafodaepequenacomcor.fbx" id="3_jggnw"]
[ext_resource type="Shader" uid="uid://tyh8tvtdacng" path="res://shaders/Outline.gdshader" id="5_eqeni"]
[ext_resource type="PackedScene" uid="uid://bm5lcief16w1j" path="res://Source/Scenes/Objects/Cenas/Telefone.tscn" id="7_ouqje"]
[ext_resource type="PackedScene" uid="uid://ddffhr2ov0m3d" path="res://Source/Assets/Modelos/Garrafa/GarrafaFodacomtextura.fbx" id="7_u2bv0"]
[ext_resource type="PackedScene" uid="uid://b78keg0ignt8j" path="res://Source/Player/Cenas/player.tscn" id="11_m1wbi"]
[ext_resource type="PackedScene" uid="uid://curejhaq0wiig" path="res://Source/Scenes/Objects/Cenas/Pasta.tscn" id="12_eqeni"]
[ext_resource type="PackedScene" uid="uid://cgfko6kr2mhuc" path="res://Source/Scenes/Objects/Cenas/Vinyl.tscn" id="12_juwpi"]
[ext_resource type="PackedScene" uid="uid://draij6dpugcym" path="res://Source/Scenes/Objects/Cenas/Porta.tscn" id="12_qvc64"]
[ext_resource type="Texture2D" uid="uid://cvkb8qkmuqjx5" path="res://Source/Assets/Sprites/Sun.png" id="13_l6wx8"]
[ext_resource type="PackedScene" uid="uid://dg651rlufkkpu" path="res://Source/Assets/Modelos/Livro_malcon/Livro malco2.fbx" id="13_m1wbi"]
[ext_resource type="PackedScene" uid="uid://seiq2mbnprlm" path="res://Source/Assets/Modelos/Cafeteria/Cafeteira/faqueteirapronta.fbx" id="13_qvc64"]
[ext_resource type="Texture2D" uid="uid://dolfnli2vtgsa" path="res://Source/Assets/Sprites/Predios.png" id="14_l6wx8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ovw4t"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jggnw"]
albedo_texture = ExtResource("2_xmjli")
uv1_scale = Vector3(60, 60, 60)

[sub_resource type="BoxMesh" id="BoxMesh_22hde"]
size = Vector3(60, 2, 60)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eqeni"]
render_priority = 0
shader = ExtResource("5_eqeni")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_width = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_ouqje"]
material = SubResource("ShaderMaterial_eqeni")
flip_faces = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m1wbi"]
albedo_texture = ExtResource("13_l6wx8")

[sub_resource type="PlaneMesh" id="PlaneMesh_l6wx8"]
material = SubResource("StandardMaterial3D_m1wbi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qvc64"]
albedo_texture = ExtResource("2_xmjli")

[sub_resource type="CylinderMesh" id="CylinderMesh_qvc64"]
material = SubResource("StandardMaterial3D_qvc64")

[node name="Cena1" type="Node" unique_id=1119634821]
process_mode = 1
script = ExtResource("1_ouqje")

[node name="Lamparina modelofinal" parent="." unique_id=1184403439 instance=ExtResource("2_2vfmm")]
transform = Transform3D(0.2244402, 0, 0.19906433, 0, 0.3, 0, -0.19906433, 0, 0.2244402, -5.8038044, 1.1785486, 6.035648)

[node name="OmniLight3D" type="OmniLight3D" parent="Lamparina modelofinal" unique_id=1113550427]
transform = Transform3D(3.3333333, 0, -3.5762787e-07, 0, 3.333333, 0, 3.5762787e-07, 0, 3.3333333, 5.1269054, 1.8721404, -0.08350468)
light_energy = 1.636
light_size = 0.178
shadow_enabled = true
omni_range = 2.372

[node name="Chão" type="StaticBody3D" parent="." unique_id=561460632]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9999995, 0)

[node name="Bloco" type="CollisionShape3D" parent="Chão" unique_id=631578560]
shape = SubResource("BoxShape3D_ovw4t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chão" unique_id=2048760675]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.014565945, -0.029417992, -0.07714462)
material_overlay = SubResource("StandardMaterial3D_jggnw")
mesh = SubResource("BoxMesh_22hde")

[node name="Mesafodaepequenacomcor" parent="." unique_id=1597368954 instance=ExtResource("3_jggnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.6078033, 0.0036923885, 4.3838634)

[node name="GarrafaFodacomtextura" parent="." unique_id=1124586928 instance=ExtResource("7_u2bv0")]
transform = Transform3D(0.22613178, 0, -0.44594222, 0, 0.5, 0, 0.44594222, 0, 0.22613178, -4.2717547, 1.168, 3.6713896)

[node name="MeshInstance3D" type="MeshInstance3D" parent="GarrafaFodacomtextura" unique_id=169419488]
transform = Transform3D(0.19852981, 0, -0.9800952, 0, 1, 0, 0.9800952, 0, 0.19852981, 0.20307302, 0.5020435, -0.0013952255)
mesh = SubResource("BoxMesh_ouqje")

[node name="Telefone" parent="." unique_id=915141437 instance=ExtResource("7_ouqje")]
process_mode = 1
transform = Transform3D(0.66913056, 0, 0.74314487, 0, 1, 0, -0.74314487, 0, 0.66913056, -4.626, 1.179, 5.16)

[node name="Livro malco2" parent="." unique_id=893685750 instance=ExtResource("13_m1wbi")]
transform = Transform3D(-0.037324354, -0.027344778, 0.018951371, -0.0011315085, -0.027421383, -0.04179458, 0.033250734, -0.03162799, 0.019850895, -4.616606, 1.387685, 3.7090795)

[node name="Player" parent="." unique_id=1240492296 instance=ExtResource("11_m1wbi")]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, -3.8001873, 0.912, 4.384)
se_move = false
folha = false

[node name="OmniLight3D" type="OmniLight3D" parent="Player" unique_id=744765711]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -0.77063835, 0)
light_energy = 1.315
omni_range = 1.585

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1112958604]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -3.062861, 2.4073012, 0.843724)
mesh = SubResource("PlaneMesh_l6wx8")

[node name="Sprite3D" type="Sprite3D" parent="MeshInstance3D" unique_id=397683452]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.07616353, 0.2962314, 0.31154454)
cast_shadow = 0
gi_mode = 2
alpha_cut = 3
texture = ExtResource("14_l6wx8")

[node name="SpotLight3D2" type="SpotLight3D" parent="MeshInstance3D" unique_id=1304021077]
transform = Transform3D(0.99553233, 0, -0.094421074, 0.094421074, -4.371139e-08, 0.99553233, -4.1272763e-09, -1, -4.35161e-08, 0.11444807, 3.4161167, 0.4316063)
spot_range = 6.274
spot_attenuation = -0.69
spot_angle = 26.5
spot_angle_attenuation = 0.1806876

[node name="Porta" parent="." unique_id=704416160 instance=ExtResource("12_qvc64")]
transform = Transform3D(-0.26999992, 0, 0.00013662875, 0, 0.27, 0, -0.00013662875, 0, -0.26999992, 0.9, 0, 4.384)

[node name="Vinyl" parent="." unique_id=1120069274 instance=ExtResource("12_juwpi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.144808, 0.079818845, 8.210838)

[node name="Pasta" parent="." unique_id=1623291131 instance=ExtResource("12_eqeni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.464, 1.151, 4.406)

[node name="faqueteirapronta" parent="." unique_id=156867163 instance=ExtResource("13_qvc64")]
transform = Transform3D(-0.1286591, 0, -0.48316336, 0, 0.5, 0, 0.48316336, 0, -0.1286591, -2.4256678, 1.0357966, 1.2011566)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="faqueteirapronta" unique_id=1201382455]
transform = Transform3D(-0.5146364, 0, 1.9326534, 0, 2, 0, -1.9326534, 0, -0.5146364, 0.62756824, -1.9975293, -0.014854431)
mesh = SubResource("CylinderMesh_qvc64")

[connection signal="interagido" from="Telefone" to="." method="_on_telefone_interagido"]
[connection signal="interagido" from="Porta" to="." method="_on_porta_interagido"]
[connection signal="interagido" from="Pasta" to="." method="_on_pasta_interagido"]
